move images from Qiniu

--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -2,7 +2,7 @@
 	<div class="wrapper">
 		<h2>
 			<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="<%= locale_path "/" %>">
-				<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo-square.png">
+				<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="/images/logo-square.png">
 				<span><%= I18n.t :slogan %></span>
 			</a>
 		</h2>
