--- a/source/_header.erb
+++ b/source/_header.erb
@@ -5,7 +5,7 @@
 	<div class="wrapper">
 		<h1>
 			<a title="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" href="<%= locale_path "/" %>">
-				<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="<%= data.site.image_base_url %>/logo.png">
+				<img alt="<%= I18n.t :brand %> - <%= I18n.t :slogan %>" src="/images/logo.png">
 			</a>
 		</h1>
 		<ul>
