--- a/source/guides/en/ios/calorie/daily-calorie-logs.html.markdown.erb
+++ b/source/guides/en/ios/calorie/daily-calorie-logs.html.markdown.erb
@@ -7,16 +7,16 @@ date: 2015/10/10
 
 Total of daily intake. Total of daily burn. Daily calorie net.
 
-![Daily Total － Calorie](<%= data.site.image_base_url %>/screenshot69.png)
+![Daily Total － Calorie](/images/screenshot69.png)
 
 ## Recommended daily intake in logs
 
 Calculate recommended daily intake automatically. Progress represent how much daily calorie net of recommended daily intake. 
 
-![Progress － Calorie](<%= data.site.image_base_url %>/screenshot70.png)
+![Progress － Calorie](/images/screenshot70.png)
 
 ## Calendar in logs
 
 Navigation by day or by month quickly. It`s very easy to check calorie of some day.
 
-![Calendar － Calorie](<%= data.site.image_base_url %>/screenshot71.png)
+![Calendar － Calorie](/images/screenshot71.png)
