--- a/source/guides/en/ios/calorie/search-foods-or-exercises-to-add-log.html.markdown.erb
+++ b/source/guides/en/ios/calorie/search-foods-or-exercises-to-add-log.html.markdown.erb
@@ -7,22 +7,22 @@ date: 2015/12/10
 
 Choose to search foods and type name to search.
 
-![Search foods - Calorie](<%= data.site.image_base_url %>/screenshot55.png)
+![Search foods - Calorie](/images/screenshot55.png)
 
 ## Search exercises 
 
 Choose to search exercises and type name to search.
 
-![Search exercises - Calorie](<%= data.site.image_base_url %>/screenshot56.png)
+![Search exercises - Calorie](/images/screenshot56.png)
 
 ## Detail 
 
 Tap search results to see detail.
 
-![Detail - Calorie](<%= data.site.image_base_url %>/screenshot57.png)
+![Detail - Calorie](/images/screenshot57.png)
 
 ## New Log 
 
 Scroll picker to choose quantity and unit as following screenshot. Tap save on right top corner to save log.
 
-![New Log - Calorie](<%= data.site.image_base_url %>/screenshot58.png)
+![New Log - Calorie](/images/screenshot58.png)
