--- a/source/guides/en/iphone/track/in-app-purchase.html.markdown.erb
+++ b/source/guides/en/iphone/track/in-app-purchase.html.markdown.erb
@@ -7,26 +7,26 @@ date: 2015/12/10
 
 If you have not purchase function of record weight. You will see following view. Tap white bar button to purchase.
 
-![In-App Purchase - Record Water - Health Diary](<%= data.site.image_base_url %>/screenshot87.png)
+![In-App Purchase - Record Water - Health Diary](/images/screenshot87.png)
 
 If you have not purchase function of record water. You will see following view. Tap white bar button to purchase.
 
-![In-App Purchase - Record Mood - Health Diary](<%= data.site.image_base_url %>/screenshot88.png)
+![In-App Purchase - Record Mood - Health Diary](/images/screenshot88.png)
 
 If you have not purchase function of record mood. You will see following view. Tap white bar button to purchase.
 
-![In-App Purchase - Record Target - Health Diary](<%= data.site.image_base_url %>/screenshot89.png)
+![In-App Purchase - Record Target - Health Diary](/images/screenshot89.png)
 
 If you have not purchase function of record target. You will see following view. Tap white bar button to purchase.
 
-![In-App Purchase - Record Weight - Health Diary](<%= data.site.image_base_url %>/screenshot90.png)
+![In-App Purchase - Record Weight - Health Diary](/images/screenshot90.png)
 
 ## Restore purchased functions
 
 First. Tap item "settings" of tab bar. Then tap "In-App Purchase".
 
-![In-App Purchase - Settings - Health Diary](<%= data.site.image_base_url %>/screenshot86.png)
+![In-App Purchase - Settings - Health Diary](/images/screenshot86.png)
 
 Already purchased item will show "purchased". Not purchased item will show "price". Tap "restore" of top right corner to restore purchased functions.
 
-![In-App Purchase - Restore - Health Diary](<%= data.site.image_base_url %>/screenshot85.png)
+![In-App Purchase - Restore - Health Diary](/images/screenshot85.png)
