--- a/source/guides/zh/ios/calorie/browse-categories-or-brands-to-add-log.html.markdown.erb
+++ b/source/guides/zh/ios/calorie/browse-categories-or-brands-to-add-log.html.markdown.erb
@@ -5,26 +5,26 @@ date: 2015/11/10
 
 ## 浏览分类 
 
-![浏览分类－热量助手](<%= data.site.image_base_url %>/screenshot47.png)
+![浏览分类－热量助手](/images/screenshot47.png)
 
 ## 浏览品牌 
 
-![浏览品牌－热量助手](<%= data.site.image_base_url %>/screenshot48.png)
+![浏览品牌－热量助手](/images/screenshot48.png)
 
 ## 查看分类或品牌
 
 点击分类可以查看分类下所有食物或者锻炼，点击品牌可以查看品牌下所有食物
 
-![分类详细－热量助手](<%= data.site.image_base_url %>/screenshot49.png)
+![分类详细－热量助手](/images/screenshot49.png)
 
 ## 详细信息
 
 点击分类中某一食物，查看详细信息
 
-![食物详细－热量助手](<%= data.site.image_base_url %>/screenshot50.png)
+![食物详细－热量助手](/images/screenshot50.png)
 
 ## 新增记录
 
 在如下界面中滑动滚动条选择数量和单位，选择好再点击存储
 
-![新增记录－热量助手](<%= data.site.image_base_url %>/screenshot51.png)
+![新增记录－热量助手](/images/screenshot51.png)
