--- a/source/guides/zh/ios/calorie/daily-calorie-logs.html.markdown.erb
+++ b/source/guides/zh/ios/calorie/daily-calorie-logs.html.markdown.erb
@@ -7,16 +7,16 @@ date: 2015/10/10
 
 每日摄入总和，每日消耗总和，每日热量净值。
 
-![每日统计信息－热量助手](<%= data.site.image_base_url %>/screenshot66.png)
+![每日统计信息－热量助手](/images/screenshot66.png)
 
 ## 记录中的每日所需基本热量
 
 自动计算的每日所需基本热量，进度条代表每日热量净值占每日所需基本热量的多少。
 
-![进度条－热量助手](<%= data.site.image_base_url %>/screenshot67.png)
+![进度条－热量助手](/images/screenshot67.png)
 
 ## 记录中的日历
 
 便捷地前后天导航，月份导航，很容易查看某一天的热量。
 
-![日历－热量助手](<%= data.site.image_base_url %>/screenshot68.png)
+![日历－热量助手](/images/screenshot68.png)
