--- a/source/guides/zh/iphone/track/edit-target.html.markdown.erb
+++ b/source/guides/zh/iphone/track/edit-target.html.markdown.erb
@@ -5,12 +5,12 @@ date: 2015/11/10
 
 选择标签栏中的“设置”，点击“目标”查看所有目标。
 
-![编辑目标－设置－健康日记](<%= data.site.image_base_url %>/screenshot96.png)
+![编辑目标－设置－健康日记](/images/screenshot96.png)
 
 点击某一行目标进行编辑。
 
-![编辑目标－目标－健康日记](<%= data.site.image_base_url %>/screenshot93.png)
+![编辑目标－目标－健康日记](/images/screenshot93.png)
 
 编辑目标内容，然后保存。
 
-![编辑目标－编辑目标－健康日记](<%= data.site.image_base_url %>/screenshot94.png)
+![编辑目标－编辑目标－健康日记](/images/screenshot94.png)
