--- a/source/localizable/mac/calorie.html.erb
+++ b/source/localizable/mac/calorie.html.erb
@@ -5,13 +5,13 @@ header: light
 
 <section id="calorie_mac_banner">
 	<div>
-		<img alt="<%= I18n.t("calorie_mac.icon.alt") %>" src="<%= data.site.image_base_url %>/icon-calorie-mac.png">
+		<img alt="<%= I18n.t("calorie_mac.icon.alt") %>" src="/images/icon-calorie-mac.png">
 		<h1><%= I18n.t("calorie_mac.name") %></h1>
 		<h2><%= I18n.t("calorie_mac.device") %></h2>
 	</div>
 </section>
 <section id="product_screenshot">
-	<img alt="<%= I18n.t("calorie_mac.screenshot.alt") %>" src="<%= data.site.image_base_url %>/<%= I18n.t("calorie_mac.screenshot.src") %>">
+	<img alt="<%= I18n.t("calorie_mac.screenshot.alt") %>" src="/images/<%= I18n.t("calorie_mac.screenshot.src") %>">
 </section>
 <section id="calorie_mac_benefit">
   <div class="wrapper">
@@ -39,5 +39,5 @@ header: light
 	<a href="<%= I18n.t("calorie_mac.campaign") %>" title="<%= I18n.t("calorie_mac.buy") %>"><%= I18n.t("calorie_mac.download") %></a>
 </section>
 <section id="calorie_mac_secondary">
-	<a href="<%= data.site.image_base_url %>/<%= I18n.t("calorie_mac.press_kit_zip") %>" title="<%= I18n.t("calorie_mac.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("calorie_mac.press_kit") %></a>
+	<a href="/images/<%= I18n.t("calorie_mac.press_kit_zip") %>" title="<%= I18n.t("calorie_mac.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("calorie_mac.press_kit") %></a>
 </section>
