--- a/source/guides/en/iphone/track/edit-target.html.markdown.erb
+++ b/source/guides/en/iphone/track/edit-target.html.markdown.erb
@@ -5,12 +5,12 @@ date: 2015/11/10
 
 Choose item "Settings" in tab bar. Tap "Targets" to see all targets.
 
-![Edit Target - Settings - Health Diary](<%= data.site.image_base_url %>/screenshot95.png)
+![Edit Target - Settings - Health Diary](/images/screenshot95.png)
 
 Tap any target to edit.
 
-![Edit Target - Targets - Health Diary](<%= data.site.image_base_url %>/screenshot91.png)
+![Edit Target - Targets - Health Diary](/images/screenshot91.png)
 
 Edit target content and save.
 
-![Edit Target - Edit Target - Health Diary](<%= data.site.image_base_url %>/screenshot92.png)
+![Edit Target - Edit Target - Health Diary](/images/screenshot92.png)
