--- a/source/guides/zh/ios/calorie/search-foods-or-exercises-to-add-log.html.markdown.erb
+++ b/source/guides/zh/ios/calorie/search-foods-or-exercises-to-add-log.html.markdown.erb
@@ -7,22 +7,22 @@ date: 2015/12/10
 
 明确搜索的类型为食物，然后输入名称进行搜索
 
-![搜索食物－热量助手](<%= data.site.image_base_url %>/screenshot43.png)
+![搜索食物－热量助手](/images/screenshot43.png)
 
 ## 搜索锻炼 
 
 明确搜索的类型为锻炼，然后输入名称进行搜索
 
-![食物详细－热量助手](<%= data.site.image_base_url %>/screenshot44.png)
+![食物详细－热量助手](/images/screenshot44.png)
 
 ## 详细信息
 
 点击搜索结果，查看详细信息
 
-![食物详细－热量助手](<%= data.site.image_base_url %>/screenshot45.png)
+![食物详细－热量助手](/images/screenshot45.png)
 
 ## 新增记录
 
 在如下界面中滑动滚动条选择数量和单位，选择好再点击存储
 
-![新增记录－热量助手](<%= data.site.image_base_url %>/screenshot46.png)
+![新增记录－热量助手](/images/screenshot46.png)
