--- a/source/localizable/iphone/track.html.erb
+++ b/source/localizable/iphone/track.html.erb
@@ -5,13 +5,13 @@ header: light
 
 <section id="track_iphone_banner">
   <div class="track_iphone">
-		<img alt="<%= I18n.t("track_iphone.icon.alt") %>" src="<%= data.site.image_base_url %>/icon-track-iphone.png">
+		<img alt="<%= I18n.t("track_iphone.icon.alt") %>" src="/images/icon-track-iphone.png">
     <h1><%= I18n.t("track_iphone.name") %></h1>
     <h2><%= I18n.t("track_iphone.device") %></h2>
   </div>
 </section>
 <section id="product_screenshot">
-	<img alt="<%= I18n.t("track_iphone.screenshot.alt") %>" src="<%= data.site.image_base_url %>/<%= I18n.t("track_iphone.screenshot.src") %>">
+	<img alt="<%= I18n.t("track_iphone.screenshot.alt") %>" src="/images/<%= I18n.t("track_iphone.screenshot.src") %>">
 </section>
 <section id="track_iphone_why">
   <div class="wrapper">
@@ -45,5 +45,5 @@ header: light
 	<a href="<%= I18n.t("track_iphone.campaign") %>" title="<%= I18n.t("track_iphone.buy") %>"><%= I18n.t("track_iphone.download") %></a>
 </section>
 <section id="track_iphone_secondary">
-	<a href="<%= data.site.image_base_url %>/<%= I18n.t("track_iphone.press_kit_zip") %>" title="<%= I18n.t("track_iphone.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("track_iphone.press_kit") %></a>
+	<a href="/images/<%= I18n.t("track_iphone.press_kit_zip") %>" title="<%= I18n.t("track_iphone.press_kit") %>"><i class="fa fa-download"></i>&nbsp;&nbsp;<%= I18n.t("track_iphone.press_kit") %></a>
 </section>
