update products campaign links and add baidu tongji

--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -9,6 +9,15 @@
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag "modernizr-2.8.3.min" %>
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "//hm.baidu.com/hm.js?89354104a5eab8f2071723570f68c87a";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 	</head>
 	<body>
 		<%= partial "header" %> 
