replace timer with workout

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -19,10 +19,10 @@ name: products
 			<h3><%= I18n.t "products.track_iphone.name" %></h3>
 			<p><%= I18n.t "products.track_iphone.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.timer_ios.name" %>" href="#">
-			<img alt="<%= I18n.t "products.timer_ios.name" %>" src="/images/icon-timer-iphone.png">
-			<h3><%= I18n.t "products.timer_ios.name" %></h3>
-			<p><%= I18n.t "products.timer_ios.device" %></p>
+		<a title="<%= I18n.t "products.workout_iphone.name" %>" href="#">
+			<img alt="<%= I18n.t "products.workout_iphone.name" %>" src="/images/icon-workout-iphone.png">
+			<h3><%= I18n.t "products.workout_iphone.name" %></h3>
+			<p><%= I18n.t "products.workout_iphone.device" %></p>
 		</a>
 		<div class="clearfix"></div>
 	</div>
