--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
 		<title><%= I18n.t "#{ current_page.data.name }.title" %></title>
 		<meta name="description" content="<%= I18n.t "#{ current_page.data.name }.description" %>">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<% if current_page.data.app %><meta name="apple-itunes-app" content="app-id=<%= current_page.data.app %>"><% end %>
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag "modernizr-2.8.3.min" %>
