--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -19,7 +19,7 @@ name: products
 			<h3><%= I18n.t "products.track_iphone.name" %></h3>
 			<p><%= I18n.t "products.track_iphone.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.workout_iphone.name" %>" href="#">
+		<a title="<%= I18n.t "products.workout_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
 			<img alt="<%= I18n.t "products.workout_iphone.name" %>" src="/images/icon-workout-iphone.png">
 			<h3><%= I18n.t "products.workout_iphone.name" %></h3>
 			<p><%= I18n.t "products.workout_iphone.device" %></p>
