remove health diary

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -14,15 +14,15 @@ name: products
 			<h3><%= I18n.t "products.calorie_mac.name" %></h3>
 			<p><%= I18n.t "products.calorie_mac.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.track_iphone.name" %>" href="<%= locale_path "iphone/track" %>">
-			<img alt="<%= I18n.t "products.track_iphone.name" %>" src="/images/icon-track-iphone.png">
-			<h3><%= I18n.t "products.track_iphone.name" %></h3>
-			<p><%= I18n.t "products.track_iphone.device" %></p>
-		</a>
 		<a title="<%= I18n.t "products.workout_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
 			<img alt="<%= I18n.t "products.workout_iphone.name" %>" src="/images/icon-workout-iphone.png">
 			<h3><%= I18n.t "products.workout_iphone.name" %></h3>
 			<p><%= I18n.t "products.workout_iphone.device" %></p>
+		</a>
+		<a title="<%= I18n.t "products.walk_iphone.name" %>" href="#">
+			<img alt="<%= I18n.t "products.walk_iphone.name" %>" src="/images/icon-walk-iphone.png">
+			<h3><%= I18n.t "products.walk_iphone.name" %></h3>
+			<p><%= I18n.t "products.walk_iphone.device" %></p>
 		</a>
 		<div class="clearfix"></div>
 	</div>
