Calorie -> Wuhoo Calorie

--- a/source/guides/en/ios/calorie/browse-categories-or-brands-to-add-log.html.markdown.erb
+++ b/source/guides/en/ios/calorie/browse-categories-or-brands-to-add-log.html.markdown.erb
@@ -5,26 +5,26 @@ date: 2015/11/10
 
 ## Browse categories
 
-![Browse categories - Calorie](/images/screenshot59.png)
+![Browse categories - Wuhoo Calorie](/images/screenshot59.png)
 
 ## Browse brands
 
-![Browse brands - Calorie](/images/screenshot60.png)
+![Browse brands - Wuhoo Calorie](/images/screenshot60.png)
 
 ## View category or brand
 
 Tap category to view all foods or exercises of this category. Tap brand to view all foods of this brand.
 
-![View category or brand - Calorie](/images/screenshot61.png)
+![View category or brand - Wuhoo Calorie](/images/screenshot61.png)
 
 ## Detail 
 
 Tap one food of category or brand to see detail.
 
-![Detail - Calorie](/images/screenshot62.png)
+![Detail - Wuhoo Calorie](/images/screenshot62.png)
 
 ## New Log 
 
 Scroll picker to choose quantity and unit as following screenshot. Tap save on right top corner to save log.
 
-![New Log - Calorie](/images/screenshot63.png)
+![New Log - Wuhoo Calorie](/images/screenshot63.png)
