--- a/source/guides/zh/ios/calorie/calorie-today-widget.html.markdown.erb
+++ b/source/guides/zh/ios/calorie/calorie-today-widget.html.markdown.erb
@@ -7,14 +7,14 @@ date: 2015/9/10
 
 你可以在通知中心的今天中查看每天热量摄入，消耗和净值，在应用中记录热量，插件中的数据也会同步变化。
 
-![通知中心的插件－热量助手](/images/screenshot72.png)
+![通知中心的插件 - Wuhoo 热量](/images/screenshot72.png)
 
 ## 如何添加插件
 
-点击热量助手前面的加号，添加插件。
+点击热量前面的加号，添加插件。
 
-![选择热量助手插件－热量助手](/images/screenshot73.png)
+![选择热量插件 - Wuhoo 热量](/images/screenshot73.png)
 
-插件添加后，点击完成，热量助手的插件就会出现在通知中心的今天中。
+插件添加后，点击完成，热量的插件就会出现在通知中心的今天中。
 
-![添加热量助手插件－热量助手](/images/screenshot74.png)
+![添加热量插件 - Wuhoo 热量](/images/screenshot74.png)
