--- a/source/guides/zh/ios/calorie/contribution-to-help-us-do-better.html.markdown.erb
+++ b/source/guides/zh/ios/calorie/contribution-to-help-us-do-better.html.markdown.erb
@@ -3,23 +3,23 @@ title: 贡献一份力量帮助我们做得更好
 date: 2015/8/10
 ---
 
-## 不满意搜索结果，告诉我们 
+## 不满意搜索结果，告诉我们
 
 如果你没有搜索到想要的食物，发送邮件告诉我们，我们会及时处理
 
-![不满意搜索结果 - 热量助手](/images/screenshot52.png)
+![不满意搜索结果 - Wuhoo 热量](/images/screenshot52.png)
 
 ## 纠错
 
 在食物详细界面中，点击右上角的“纠错”可以报告数据问题，我们会检查数据是否有问题并做出修正
 
-![纠错 - 热量助手](/images/screenshot53.png)
+![纠错 - Wuhoo 热量](/images/screenshot53.png)
 
 ## 帮助我们
 
 在设置界面中，点击“帮助我们”来发送食物或锻炼的数据
 
-![帮助我们 - 热量助手](/images/screenshot54.png)
+![帮助我们 - Wuhoo 热量](/images/screenshot54.png)
 
 ## 帮助我们做得更好
 
