--- a/source/guides/en/ios/calorie/calorie-today-widget.html.markdown.erb
+++ b/source/guides/en/ios/calorie/calorie-today-widget.html.markdown.erb
@@ -3,18 +3,18 @@ title: Calorie today widget
 date: 2015/9/10
 ---
 
-## Calorie today widget 
+## Calorie today widget
 
 You can view daily calorie intake, burn and net in today of notification center. After you add calorie log in app. The data in today widget will also change.
 
-![Calorie today widget－Calorie](/images/screenshot75.png)
+![Calorie today widget - Wuhoo Calorie](/images/screenshot75.png)
 
-## How to add widget 
+## How to add widget
 
 Click plus button before "Calorie" to add widget.
 
-![Choose Calorie today widget－Calorie](/images/screenshot76.png)
+![Choose Calorie today widget - Wuhoo Calorie](/images/screenshot76.png)
 
 After add widget. Press "Done" to finish. Calorie today widget is showing in notification center.
 
-![Add Calorie today widget－Calorie](/images/screenshot77.png)
+![Add Calorie today widget - Wuhoo Calorie](/images/screenshot77.png)
