--- a/source/guides/en/ios/calorie/contribution-to-help-us-do-better.html.markdown.erb
+++ b/source/guides/en/ios/calorie/contribution-to-help-us-do-better.html.markdown.erb
@@ -5,21 +5,21 @@ date: 2015/7/10
 
 ## Be unsatisfied with results. Tell us
 
-When you search some foods we don`t have. Email it to us. We will find the food and add it to our food library. 
+When you search some foods we don`t have. Email it to us. We will find the food and add it to our food library.
 
-![Be unsatisfied with results. Tell us - Calorie](/images/screenshot64.png)
+![Be unsatisfied with results. Tell us - Wuhoo Calorie](/images/screenshot64.png)
 
 ## Report
 
 When you see a food data is not right in the detail view. Tap "Report" on the top right corner to report problem. We will find the problem and change it.
 
-![Report - Calorie](/images/screenshot65.png)
+![Report - Wuhoo Calorie](/images/screenshot65.png)
 
 ## Help us
 
 In the setting view, tap "help us" to add a food or an exercise
 
-![Help us - Calorie](/images/screenshot78.png)
+![Help us - Wuhoo Calorie](/images/screenshot78.png)
 
 ## Help us to make it better
 
