Workout -> Wuhoo Workout

--- a/source/guides/en/iphone/workout/how-to-create-workout.html.markdown.erb
+++ b/source/guides/en/iphone/workout/how-to-create-workout.html.markdown.erb
@@ -7,66 +7,66 @@ date: 2016/11/25
 
 Launch app show main interface. Tap **+** in the top right corner. Go to create workout interface.
 
-![Create Workout － Workout](/images/en-workout-iphone-screenshot-create-workout.jpg)
+![Create Workout - Wuhoo Workout](/images/en-workout-iphone-screenshot-create-workout.jpg)
 
 ## Edit workout name
 
 Tap **workout name**. Edit workout name. Tap save to confirm change.
 
-![Edit Workout Name － Workout](/images/en-workout-iphone-screenshot-edit-workout-name.jpg)
+![Edit Workout Name - Wuhoo Workout](/images/en-workout-iphone-screenshot-edit-workout-name.jpg)
 
 ## Edit workout countdown
 
 Tap **workout countdown**. Edit workout countdown. Tap save to confirm change.
 
-![Edit Workout Countdown － Workout](/images/en-workout-iphone-screenshot-edit-workout-countdown.jpg)
+![Edit Workout Countdown - Wuhoo Workout](/images/en-workout-iphone-screenshot-edit-workout-countdown.jpg)
 
 ## Add exercise step
 
 Tap **Add exercise step**. A new exercise step should show.
 
-![Add Exercise Step － Workout](/images/en-workout-iphone-screenshot-add-exercise-step.jpg)
+![Add Exercise Step - Wuhoo Workout](/images/en-workout-iphone-screenshot-add-exercise-step.jpg)
 
 Tap **exercise step**. Go to edit exercise step interface.
 
-![Edit Exercise Step － Workout](/images/en-workout-iphone-screenshot-edit-exercise-step.jpg)
+![Edit Exercise Step - Wuhoo Workout](/images/en-workout-iphone-screenshot-edit-exercise-step.jpg)
 
 Tap **name**. Edit exercise step name. Tap save to confirm change.
 
-![Exercise Step Name － Workout](/images/en-workout-iphone-screenshot-exercise-step-name.jpg)
+![Exercise Step Name - Wuhoo Workout](/images/en-workout-iphone-screenshot-exercise-step-name.jpg)
 
 Tap **duration**. Edit exercise step duration. Tap save to confirm change.
 
 > <i class="fa fa-lightbulb-o"></i> If the measure type is duration. When you are doing workout. App will measure duration automatically. App will go to next step when time is up.
 
-![Exercise Step Duration － Workout](/images/en-workout-iphone-screenshot-exercise-step-duration.jpg)
+![Exercise Step Duration - Wuhoo Workout](/images/en-workout-iphone-screenshot-exercise-step-duration.jpg)
 
 You can change measure type to count. You can measure how many counts you want to do for this exercise step. Tap **count**. Edit exercise step count. Tap save to confirm change.
 
 > <i class="fa fa-lightbulb-o"></i> If the measure type is count. When you are doing workout. App will not measure count automatically. You should measure this by yourself. Tap finish to go to next step.
 
-![Exercise Step Count － Workout](/images/en-workout-iphone-screenshot-exercise-step-count.jpg)
+![Exercise Step Count - Wuhoo Workout](/images/en-workout-iphone-screenshot-exercise-step-count.jpg)
 
 You can also **plus an image** for exercise step. Let it be an action reference.
 
-![Exercise Step Image － Workout](/images/en-workout-iphone-screenshot-exercise-step-image.jpg)
+![Exercise Step Image - Wuhoo Workout](/images/en-workout-iphone-screenshot-exercise-step-image.jpg)
 
 You can also **plus some words** for exercise step. Let it be a detail description.
 
-![Exercise Step Description － Workout](/images/en-workout-iphone-screenshot-exercise-step-description.jpg)
+![Exercise Step Description - Wuhoo Workout](/images/en-workout-iphone-screenshot-exercise-step-description.jpg)
 
 ## Add rest step
 
 Tap **Add rest step**. A new rest step should show.
 
-![Add Rest Step － Workout](/images/en-workout-iphone-screenshot-add-rest-step.jpg)
+![Add Rest Step - Wuhoo Workout](/images/en-workout-iphone-screenshot-add-rest-step.jpg)
 
 Tap **rest step**. Edit rest step duration. Tap save to confirm change.
 
-![Rest Step Duration － Workout](/images/en-workout-iphone-screenshot-rest-step-duration.jpg)
+![Rest Step Duration - Wuhoo Workout](/images/en-workout-iphone-screenshot-rest-step-duration.jpg)
 
 ## Edit workout repeat
 
 Tap **repeat**. Edit workout repeat. Tap save to confirm change.
 
-![Edit Workout Repeat － Workout](/images/en-workout-iphone-screenshot-edit-workout-repeat.jpg)
+![Edit Workout Repeat - Wuhoo Workout](/images/en-workout-iphone-screenshot-edit-workout-repeat.jpg)
