--- a/source/guides/zh/iphone/workout/how-to-create-workout.html.markdown.erb
+++ b/source/guides/zh/iphone/workout/how-to-create-workout.html.markdown.erb
@@ -7,66 +7,66 @@ date: 2016/11/25
 
 启动应用进入主界面，点击主界面右上角的 **+** 按钮，再进入创建训练的界面。
 
-![Create Workout － Workout](/images/zh-workout-iphone-screenshot-create-workout.jpg)
+![创建训练 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-create-workout.jpg)
 
 ## 编辑训练名称
 
 点击 **训练名称**，编辑训练名称，保存修改。
 
-![Edit Workout Name － Workout](/images/zh-workout-iphone-screenshot-edit-workout-name.jpg)
+![编辑训练名称 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-edit-workout-name.jpg)
 
 ## 编辑倒计时
 
 点击 **倒计时**，选择时间，保存修改。
 
-![Edit Workout Countdown － Workout](/images/zh-workout-iphone-screenshot-edit-workout-countdown.jpg)
+![编辑训练倒计时 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-edit-workout-countdown.jpg)
 
 ## 添加锻炼步骤
 
 点击 **添加锻炼步骤**，就在已有步骤下多一个锻炼步骤。
 
-![Add Exercise Step － Workout](/images/zh-workout-iphone-screenshot-add-exercise-step.jpg)
+![添加锻炼步骤 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-add-exercise-step.jpg)
 
 点击 **锻炼步骤**，进入编辑步骤界面。
 
-![Edit Exercise Step － Workout](/images/zh-workout-iphone-screenshot-edit-exercise-step.jpg)
+![编辑锻炼步骤 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-edit-exercise-step.jpg)
 
 点击 **步骤名称**，编辑步骤名称，保存修改。
 
-![Exercise Step Name － Workout](/images/zh-workout-iphone-screenshot-exercise-step-name.jpg)
+![锻炼步骤名称 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-exercise-step-name.jpg)
 
 点击 **时间**，编辑衡量时间，保存修改。
 
 > <i class="fa fa-lightbulb-o"></i> 当锻炼步骤的衡量方式为时间时，在做训练时会自动计时，时间到就进入下一步。
 
-![Exercise Step Duration － Workout](/images/zh-workout-iphone-screenshot-exercise-step-duration.jpg)
+![锻炼步骤时间 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-exercise-step-duration.jpg)
 
 还可以切换衡量方式为次数，这个锻炼步骤你准备做多少次，点击 **次数**，编辑衡量次数，保存修改。
 
 > <i class="fa fa-lightbulb-o"></i> 当锻炼步骤的衡量方式为次数时，在做训练时不会自动计数，需要自己确认完成后，点击完成才进入下一步。
 
-![Exercise Step Count － Workout](/images/zh-workout-iphone-screenshot-exercise-step-count.jpg)
+![锻炼步骤次数 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-exercise-step-count.jpg)
 
 你还可以为锻炼步骤 **附加一张图片** 做为动作参考。
 
-![Exercise Step Image － Workout](/images/zh-workout-iphone-screenshot-exercise-step-image.jpg)
+![锻炼步骤图片 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-exercise-step-image.jpg)
 
 你还可以为锻炼步骤 **附加一些文字** 来做进一步的说明。
 
-![Exercise Step Description － Workout](/images/zh-workout-iphone-screenshot-exercise-step-description.jpg)
+![锻炼步骤文字 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-exercise-step-description.jpg)
 
 ## 添加休息步骤
 
 点击 **添加休息步骤**，就在已有步骤下多一个休息步骤。
 
-![Add Rest Step － Workout](/images/zh-workout-iphone-screenshot-add-rest-step.jpg)
+![添加休息步骤 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-add-rest-step.jpg)
 
 点击 **休息**，编辑时间，保存修改。
 
-![Rest Step Duration － Workout](/images/zh-workout-iphone-screenshot-rest-step-duration.jpg)
+![休息步骤时间 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-rest-step-duration.jpg)
 
 ## 编辑循环次数
 
 点击 **循环**，选择次数，保存修改。
 
-![Edit Workout Repeat － Workout](/images/zh-workout-iphone-screenshot-edit-workout-repeat.jpg)
+![编辑训练循环 - Wuhoo 训练](/images/zh-workout-iphone-screenshot-edit-workout-repeat.jpg)
