--- a/source/_header.erb
+++ b/source/_header.erb
@@ -29,7 +29,7 @@
 			</li>
 			<li>
 				<a title="<%= I18n.t "language.title" %>" href="<%= I18n.t :site_url %>">
-					<div class="icon"><i class="fa fa-language"></i></div>
+					<div class="icon"><i class="fa fa-<%= I18n.t "language.icon" %>"></i></div>
 					<div class="text"><%= I18n.t "language.name" %></div>
 				</a>
 			</li>
