workout for tabata, scientific 7 mins, advance 7 mins

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,6 +4,26 @@ name: products
 
 <section id="products">
 	<div class="wrapper">
+		<a title="<%= I18n.t "products.workout_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
+			<img alt="<%= I18n.t "products.workout_iphone.name" %>" src="/images/icon-workout-iphone.png">
+			<h3><%= I18n.t "products.workout_iphone.name" %></h3>
+			<p><%= I18n.t "products.workout_iphone.device" %></p>
+		</a>
+		<a title="<%= I18n.t "products.tabata_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
+			<img alt="<%= I18n.t "products.tabata_iphone.name" %>" src="/images/icon-tabata-iphone.png">
+			<h3><%= I18n.t "products.tabata_iphone.name" %></h3>
+			<p><%= I18n.t "products.tabata_iphone.device" %></p>
+		</a>
+		<a title="<%= I18n.t "products.scientific7_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
+			<img alt="<%= I18n.t "products.scientific7_iphone.name" %>" src="/images/icon-scientific7-iphone.png">
+			<h3><%= I18n.t "products.scientific7_iphone.name" %></h3>
+			<p><%= I18n.t "products.scientific7_iphone.device" %></p>
+		</a>
+		<a title="<%= I18n.t "products.advance7_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
+			<img alt="<%= I18n.t "products.advance7_iphone.name" %>" src="/images/icon-advance7-iphone.png">
+			<h3><%= I18n.t "products.advance7_iphone.name" %></h3>
+			<p><%= I18n.t "products.advance7_iphone.device" %></p>
+		</a>
 		<a title="<%= I18n.t "products.calorie_ios.name" %>" href="<%= locale_path "ios/calorie" %>">
 			<img alt="<%= I18n.t "products.calorie_ios.name" %>" src="/images/icon-calorie-ios.png">
 			<h3><%= I18n.t "products.calorie_ios.name" %></h3>
@@ -14,10 +34,10 @@ name: products
 			<h3><%= I18n.t "products.calorie_mac.name" %></h3>
 			<p><%= I18n.t "products.calorie_mac.device" %></p>
 		</a>
-		<a title="<%= I18n.t "products.workout_iphone.name" %>" href="<%= locale_path "iphone/workout" %>">
-			<img alt="<%= I18n.t "products.workout_iphone.name" %>" src="/images/icon-workout-iphone.png">
-			<h3><%= I18n.t "products.workout_iphone.name" %></h3>
-			<p><%= I18n.t "products.workout_iphone.device" %></p>
+		<a title="<%= I18n.t "products.track_iphone.name" %>" href="#">
+			<img alt="<%= I18n.t "products.track_iphone.name" %>" src="/images/icon-walk-iphone.png">
+			<h3><%= I18n.t "products.track_iphone.name" %></h3>
+			<p><%= I18n.t "products.track_iphone.device" %></p>
 		</a>
 		<a title="<%= I18n.t "products.walk_iphone.name" %>" href="#">
 			<img alt="<%= I18n.t "products.walk_iphone.name" %>" src="/images/icon-walk-iphone.png">
