--- a/source/stylesheets/_article.scss
+++ b/source/stylesheets/_article.scss
@@ -52,6 +52,13 @@ dl, dd, ol, ul, figure {
 	}
 
 	/**
+	 * Paragraphs
+	 */
+	p {
+		line-height: 2em;
+	}
+
+	/**
 	 * Headings
 	 */
 	h1, h2, h3, h4, h5, h6 {
